--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue-template-compiler": "^2.7.10"
   },
   "devDependencies": {
+    "@ant-design-vue/nuxt": "^1.4.1",
     "@nuxtjs/tailwindcss": "^6.11.4",
     "postcss": "^8.4.17"
   }
