--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@firebase/storage": "^0.12.2",
     "@nuxtjs/vuetify": "^1.12.3",
     "core-js": "^3.25.3",
     "nuxt": "^2.15.8",
