--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "nuxt": "^2.15.8",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
-    "vue-template-compiler": "^2.7.10"
+    "vue-template-compiler": "^2.7.10",
+    "vue3-google-login": "^2.0.26"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.11.4",
