--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/auth": "^4.9.1",
+    "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/vuetify": "^1.12.3",
     "core-js": "^3.25.3",
     "firebase": "^10.8.1",
     "nuxt": "^2.15.8",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
-    "vue-template-compiler": "^2.7.10",
-    "vue3-google-login": "^2.0.26"
+    "vue-template-compiler": "^2.7.10"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.11.4",
