--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.25.3",
     "firebase": "^10.9.0",
     "nuxt": "^2.15.8",
+    "rxjs": "^7.8.1",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10"
